# anomix

./: .gitignore  README.md  datasets.json  justfile  main.py  pyproject.toml  ruff.toml
anomix/: anomix_detector.py  config.py
anomix/cluster_count_estimation/: cluster_count_esitmator.py
anomix/data_loaders/: __init__.py  dataset_download.py  sklearn_datasets.py  trivial.py
anomix/datasets/: __init__.py  artificial.py  definition.py  download.py  extract.py  process.py
anomix/detection/: __init__.py  cblof.py  distance_threshold.py  distribution_based.py
datasets/: .gitignore
notebooks/: projekt_zum_25l.ipynb
scripts/: download_datasets.py  prepare_datasets.py
src/: config.py
src/ad_framework/: ad_framework.py
src/data_loaders/: __init__.py  dataset_download.py  dataset_wrapper.py  sklearn_datasets.py  trivial.py
tests/anomix/: test_anomix_detector.py
tests/anomix/datasets/: test_definition.py
tests/anomix/detection/: test_cblof.py  test_distance_threshold.py  test_distribution_based.py
